Add ites header

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,8 @@
 {
-  "Welcome": "Welcome"
+  "Welcome": "Welcome",
+  "Movies": "Movies",
+  "TvShows": "TV shows",
+  "More": "More",
+  "People": "People",
+  "ToAccess": "To access"
 }
