--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,3 +1,8 @@
 {
-  "Welcome": "Bienvenidos"
+  "Welcome": "Bienvenidos",
+  "Movies": "Peliculas",
+  "TvShows": "Programas de televisión",
+  "More": "Más",
+  "People": "Personas",
+  "ToAccess": "Acceder"
 }
